fixed assessment alignment

--- a/assets/css/assessment.css
+++ b/assets/css/assessment.css
@@ -65,17 +65,18 @@ header {
     border: .5px solid #D3D3D3; 
     border-radius: 5px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+    background-color: #fff; 
 }
 
 .slide-container {
     position: absolute;
     display: none;
-    top: 40px;
-    width: 900px;
-    padding: 0 40px;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
 
     text-align: center;
+    background-color: #fff;
 }
 
 .prev, .next {
@@ -109,43 +110,48 @@ header {
 }
 
 .numberquestion {
-    border: 1px solid red;
-    margin: 0 auto;
-    margin-bottom: 20px;
-    padding: 8px 0;
+    position: absolute;
+    width: 100%;
+    top: 10%;
     
     font-family: 'Trebuchet MS';
-    font-size: 25px;
-    letter-spacing: 2px;
+    font-size: 35px;
+    letter-spacing: 5px;
     text-transform: uppercase;
+
+    color: #003b83af;
 }
 
-.slide-container label {
-    border: 1px solid green;
+.label-box {    
+    position: relative;
+    width: 100%;
+    height: auto;
+    top: 20%;
+}
+
+.label-box label {
     font-family: Lato;
     font-size: 35px;
 }
 
 input {
-    position: fixed;
-    top: 220px;
+    position: absolute;
+    top: 50%;
+    width: 150px;
+    height: 30px;
+    display: block;
     margin-left: auto;
     margin-right: auto;
     left: 0;
     right: 0;
     text-align: center;
-    display: block;
-    width: 150px;
-    height: 30px;
-    margin: 20px auto;
+
+    cursor: pointer;
 }
 
 input.range_20, .range_8, .range_12, .range_50, .range_100 {
-    position: absolute;
-
     display: block;
     width: 400px;
-    margin: 20px auto;
 }
 
 input[type="number"]::-webkit-outer-spin-button,
@@ -154,13 +160,18 @@ input[type="number"]::-webkit-inner-spin-button {
     margin: 0 10px;
 }
 
-output {
-    position: relative;
-    top: 100px;
-}
-
 input:placeholder-shown {
     font-style: italic;
+}
+
+output {
+    position: absolute;
+    width: 150px;
+    top: 60%;
+    margin-left: auto;
+    margin-right: auto;
+    left: 0;
+    right: 0;
 }
 
 .dot {
@@ -182,9 +193,9 @@ input:placeholder-shown {
 /* Fading animation */
 .fade {
     -webkit-animation-name: fade;
-    -webkit-animation-duration: 1.5s;
+    -webkit-animation-duration: 1s;
     animation-name: fade;
-    animation-duration: 1.5s;
+    animation-duration: 1s;
 }
 
 @-webkit-keyframes fade {
@@ -199,8 +210,8 @@ input:placeholder-shown {
 
 .tooltip-text {
     position: absolute;
-    top: 50px;
-    left: 750px;
+    top: 60%;
+    left: 80%;
     width: 520px;
     padding: 15px;
     z-index: 1;
@@ -220,6 +231,32 @@ input:placeholder-shown {
     visibility: visible;
     transform: translate3d(0,-10px,0);
     transition: all .3s ease-in-out;
+}
+
+.button {
+    position: absolute;
+    width: 100%;
+    height: 30px;
+    top: 70%;
+}
+
+
+/* BUTTONS */
+.back-btn, .back-btn p {
+    border: 1px solid red;
+    display: inline-block;
+    height: 100%;
+
+    text-decoration: none;
+
+
+}
+
+.submit-btn {
+    width: 150px;
+    height: 35px;
+
+    color: rgb(26, 152, 248);
 }
 
 /* END ASSESSMENT BODY SECTION */
